--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Website</h1>
-        <p>This is a simple landing page</p>
+        <h1>Welcome to My Website</h1>
+        <p>This is PRASHANT KUMAR</p>
     </header>
     <section>
         <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius ex ac nisi luctus, at ultrices odio sollicitudin. Nam ac mi et lectus viverra euismod eu vitae enim. Phasellus eu purus enim. Curabitur tempor mi et varius eleifend. Sed at turpis lorem. Vestibulum consectetur ligula in nisl dictum, et rhoncus enim iaculis.</p>
+        <p> Hi, I'm Prashant Kumar, a Full Stack Developer specializing in MERN stack. I'd completed mu Master's in Computer Applications (MCA) at Galgotias University. My journey in the field of
+        computer science began with a Bachelor's in Computer Application (BCA) from Patliputra University.</p>
     </section>
     <section>
         <h2>Contact Us</h2>
-        <p>Email: info@example.com</p>
-        <p>Phone: 123-456-7890</p>
+        <p>Email: prashantkr9991@gmail.com</p>
+        <p>Phone: 9155945343</p>
     </section>
     <footer>
         <p>&copy; 2024 My Website. All rights reserved.</p>
