--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Prashant Kumar - Full Stack Developer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Welcome to My Website</h1>
-        <p>This is PRASHANT KUMAR</p>
+        <p>This is Prashant Kumar</p>
     </header>
-    <section>
-        <h2>About Us</h2>
-        <p> Hi, I'm Prashant Kumar, a Full Stack Developer specializing in MERN stack. I'd completed mu Master's in Computer Applications (MCA) at Galgotias University. My journey in the field of
-        computer science began with a Bachelor's in Computer Application (BCA) from Patliputra University.</p>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm Prashant Kumar, a Full Stack Developer specializing in MERN stack. I've completed my Master's in Computer Applications (MCA) at Galgotias University. My journey in the field of computer science began with a Bachelor's in Computer Application (BCA) from Patliputra University.</p>
     </section>
-    <section>
-        <h2>Contact Us</h2>
-        <p>Email: prashantkr9991@gmail.com</p>
-        <p>Phone: 9155945343</p>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <ul>
+            <li>Email: prashantkr9991@gmail.com</li>
+            <li>Phone: 9155945343</li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/prashant-kumar-5943531b9/">Prashant Kumar</a></li>
+            <li>GitHub: <a href="https://github.com/prashantty">prashantkumar9991</a></li>
+        </ul>
     </section>
     <footer>
-        <p>&copy; 2024 My Website. All rights reserved.</p>
+        <p>&copy; 2024 Prashant Kumar. All rights reserved.</p>
     </footer>
 </body>
 </html>
